# SemLink

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  documentation.yml  feature.yml  planning.yml  refactory.yml
src/semlink/: __main__.py  cli.py
src/semlink/core/: __init__.py
